app/javascript/styles/lines.scss
// Styling related to the lines form.

@import 'bootstrap/scss/bootstrap';
@import './_variables';

.lines-form {
  input[type="radio"] {
    -ms-transform: scale(2); /* IE 9 */
    -webkit-transform: scale(2); /* Chrome, Safari, Opera */
    transform: scale(2);
    margin: 10px;
  }

  label {
    font-size: $font-size-medium;
  }
}

